--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,17 @@
 version: 2
 
-container_config: &container_config
-  working_directory: ~/project
-  docker:
-    - image: circleci/node:8.11.3
+references:
+  container_config: &container_config
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:8.11.3
+
+  create-clasp-files: &create-clasp-files
+    run:
+        name: create clasp setting files
+        command: |
+          echo $CRASP_AUTH > ~/.clasprc.json
+          echo $CRASP_CONFIG > .clasp.json
 
 jobs:
   test:
@@ -27,16 +35,25 @@ jobs:
     <<: *container_config
     steps:
       - checkout
-      - run:
-          name: create setting files
-          command: |
-            echo $CRASP_AUTH > ~/.clasprc.json
-            echo $CRASP_CONFIG > .clasp.json
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
+      - *create-clasp-files
       - run:
           name: upload files
           command: npx clasp push
+
+  deploy:
+    <<: *container_config
+    steps:
+      - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - *create-clasp-files
+      - run:
+          name: create version
+          command: |
+            change_log=$(tail -1 version_history | sed -e "s/^[0-9]*[[:blank:]]-[[:blank:]]\(.*\)$/\1/g")
+            npx clasp version $change_log
 
 workflows:
   version: 2
@@ -46,9 +63,21 @@ workflows:
           filters:
             branches:
               only: /.*/
+            tags:
+              only: /.*/
       - upload:
           requires:
             - test
           filters:
             branches:
               only: master
+            tags:
+              only: /.*/
+      - deploy:
+          requires:
+            - upload
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
