--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,15 @@ jobs:
         run: npm ci
       - name: Run lint check
         run: npm test
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          author_name: Integration Test
+          mention: here
+          if_mention: failure,cancelled
+          fields: repo,commit,message,author, action, eventName, ref, workflow
+          text: 'hoge'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
