[WIP] Workflowの結果をSlackで通知

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,10 +29,12 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          author_name: Integration Test
+          username: Github Actions
+          icon_emoji: ':github:'
+          channel: '#github_notify'
           mention: here
           if_mention: failure,cancelled
-          fields: repo,commit,message,author, action, eventName, ref, workflow
+          fields: repo,message,author, action, workflow
           text: 'hoge'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
