--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
+          author_name: ${{ GITHUB_WORKFLOW }}
           username: Github Actions
           icon_emoji: ':github:'
           channel: '#github_notify'
