--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,8 @@ jobs:
           channel: '#github_notify'
           mention: here
           if_mention: failure,cancelled
-          fields: repo,message,author, action
-          text: '${{ job.status }}: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in ${{ github.repository }}'
+          fields: repo, action
+          text: '${{ job.status }}: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <https://github.com/${{ github.repository }}|${{ github.repository }}>'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
