--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           mention: here
           if_mention: failure,cancelled
           fields: repo, action
-          text: '${{ job.status }}: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <https://github.com/${{ github.repository }}|${{ github.repository }}>'
+          text: '<https://github.com/${{ github.repository }}/commit/${{ github.sha }}/checks|${{ job.status }}>: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <https://github.com/${{ github.repository }}|${{ github.repository }}>'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
