--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,8 +36,9 @@ jobs:
           mention: here
           if_mention: failure,cancelled
           fields: repo, action
-          text: '<https://github.com/${{ github.repository }}/commit/${{ github.sha }}/checks|${{ job.status }}>: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <https://github.com/${{ github.repository }}|${{ github.repository }}>'
+          text: '<${ URL }/commit/${{ github.sha }}/checks|${{ job.status }}>: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <${ URL }|${{ github.repository }}>'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          URL: 'https://github.com/${{ github.repository }}'
         if: always()
