--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,3 +84,17 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: 'false'
           prerelease: 'false'
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          author_name: ${{ github.workflow }}
+          username: Github Actions
+          icon_emoji: ':github:'
+          channel: '#github_notify'
+          mention: here
+          if_mention: failure,cancelled
+          text: '<https://github.com/${{ github.repository }}/commit/${{ github.sha }}/checks|${{ job.status }}>: ${{ github.workflow }} Workflow executed by ${{ github.actor }} in <https://github.com/${{ github.repository }}|${{ github.repository }}>'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
