--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "eslint src -c .eslintrc.json"
+    "test": "eslint src test -c .eslintrc.json",
+    "push": "npm run test && clasp push -f"
   },
   "repository": {
     "type": "git",
