--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "eslint src test -c .eslintrc.json",
+    "test": "eslint src test -c .eslintrc.json --fix",
     "push": "npm run test && clasp push -f"
   },
   "repository": {
